examples/test/testpolicy11427.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11427
  namespace: namespace479
spec:
  podSelector:
    matchLabels:
      key17: value30
      key18: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value4
          key15: value32
      podSelector:
        matchLabels:
          key35: value17
          key41: value0
          key37: value22
